/*
 *
 *  Copyright (C) 2019 Signal Messenger, LLC.
 *  All rights reserved.
 *
 *  SPDX-License-Identifier: GPL-3.0-only
 *
 */

syntax = "proto2";

// Protocol Buffers for the messages sent over the WebRTC data
// channel.

package data_channel;

message Accepted {
  optional uint64 id = 1;
}

message Hangup {
  enum Type {
    HANGUP_NORMAL          = 0;
    HANGUP_ACCEPTED        = 1;
    HANGUP_DECLINED        = 2;
    HANGUP_BUSY            = 3;
    HANGUP_NEED_PERMISSION = 4;
  }

  optional uint64 id       = 1;
  optional Type   type     = 2;
  optional uint32 deviceId = 3;
}

message SenderStatus {
  optional uint64 id            = 1;
  optional bool   video_enabled = 2;
}

message ReceiverStatus {
  optional uint64 id              = 1;
  optional uint64 max_bitrate_bps = 2;
}

message Data {
  optional Accepted       accepted       = 1;
  optional Hangup         hangup         = 2;
  optional SenderStatus   senderStatus   = 3;
  // If set, a larger value means a later message than a smaller value.
  // Can be used to detect that messages are out of order.
  // Useful when sending over transports that don't have ordering
  // (or when sending over more than one transport)
  optional uint64         sequenceNumber = 4;
  optional ReceiverStatus receiverStatus = 5;
}
